--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "epilot-homework",
+  "website": "https://kuznetsov-ilia.github.io/hw-epilot",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
